Fix: footer content overflowing.

--- a/dev/islamica.org/assets/postcss/_footer.css
+++ b/dev/islamica.org/assets/postcss/_footer.css
@@ -15,7 +15,7 @@
     top: 7.1rem;
     left: 3.4rem;
     width: 57rem;
-    max-width: 100%;
+    max-width: calc( 100% - 3.4rem );
 }
 
 .trs-info a {
